...
        android:layout_gravity="center"
        android:padding="20dp"
        android:importantForAutofill="no"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEt"
        android:hint="@string/enterUserName"
        android:layout_gravity="center"
        android:padding="20dp"
        android:singleLine="true"
        android:inputType="text"
        android:importantForAutofill="no"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEt"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:singleLine="true"
        android:padding="20dp"
        android:importantForAutofill="no" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rePasswordEt"
        android:hint="@string/retypePassword"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:padding="20dp"
        android:visibility="invisible"
        android:layout_marginBottom="20dp"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:text="@string/login"
            android:layout_weight="1" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/clickToRegisterUserPwdButton"
                android:text="@string/clickToRegister" />
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/clickToReturnToLogin"
                android:text="@string/returnToLoginMode"
...
                android:text="@string/returnToRegisterMode"
                android:visibility="invisible" />
        </RelativeLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerUserPwdButton"
            android:text="@string/register"
            android:visibility="invisible"
            android:layout_weight="1" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
...
