...
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/ic_secure"
            android:title="@string/menu_login" />

    </group>
</menu>

