...
                android:layout_height="?attr/actionBarSize"
                android:background="?android:attr/colorFocusedHighlight"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_alignParentTop="true"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/addphoto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
...
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_photo_to_update"
            android:paddingBottom="20dp"/>
        <EditText
            android:id="@+id/profileEditTextFname"
            android:layout_below="@+id/profileTextviewChangePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/profile_first_name"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:importantForAutofill="no"
            android:ems="10"
            android:inputType="text" />
        <EditText
            android:id="@+id/profileEditTextLname"
            android:layout_below="@+id/profileEditTextFname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/profile_last_name"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:importantForAutofill="no"
            android:inputType="text"
            android:ems="10" />
        <EditText
            android:id="@+id/profileEditTextAddress"
            android:layout_below="@+id/profileEditTextLname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/profile_address"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:importantForAutofill="no"
            android:inputType="text"
            android:ems="10" />
        <EditText
            android:id="@+id/profileEditTextPhone"
            android:layout_below="@+id/profileEditTextAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/profile_phone"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:ems="10" />
        <EditText
            android:id="@+id/profileEditTextEmail"
            android:layout_below="@+id/profileEditTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/profile_email"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:ems="10" />
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/profileSaveButton"
            android:layout_below="@id/profileEditTextEmail"
            android:layout_centerHorizontal="true"
            android:minWidth="160dp"
            android:text="@string/profile_save_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
...
